# classifim

./: CMakeLists.txt  README.md  pyproject.toml
example/: hubbard_12.ipynb  isnnn_400.ipynb  kitaev_20.ipynb  xxz_300.ipynb
src/classifim/: data_loading.py  datasets.py  huang_pca.py  input.py  io.py  ising2d.py  ising2d_w.py  layers.py  mnist.py  pipeline.py  train_logs.py  twelve_sites_bc.py  twelve_sites_pipeline.py  twelve_sites_w.py  utils.py  w.py  xxz1d.py  xxz1d_w.py
src/classifim/bench/: fidelity.py  huang_pca.py  metric.py  peaks.py  plot_tools.py
src/classifim/cpp_src/: CMakeLists.txt  metric.cpp  metric.h  metric_wrapper.cpp
