[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "classifim"
version = "0.4.1.dev2"
description = "A Python package with ClassiFIM method and FIM-estimation task."
authors = [{name = "Victor Kasatkin", email = "2148587+fiktor@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
python-requires = ">=3.8"
readme = "README.md"

[tool.scikit-build]
wheel.py-api = "py3"
